# Alloy

./: .gitignore  CMakeLists.txt  CREDITS.md  Makefile  README.md  alloy-font-generator.c  alloy-font.h  alloy.c  alloy.ld  build.sh  clean.sh  libBareMetal.c  libBareMetal.h  loader.asm  loader.c  loader.ld  stamp.h  term.c
bash/: common.sh
fonts/source-code-pro/: Makefile  build.sh  clean.sh
include/alloy/: alloy.h  app.h  cmd.h  color.h  errno.h  error.h  font.h  fs.h  heap.h  history.h  host.h  input.h  keys.h  path.h  scanner.h  scheme.h  sdl-term.h  shell.h  string.h  term.h  theme.h  types.h  var.h  version.h  vesaterm.h  xterm.h
lib/: CMakeLists.txt  Makefile  app-bin.c  app-elf.c  app.c  build.sh  clean.sh  cmd-test.c  cmd.c  color.c  heap-test.c  heap.c  host.c  input-test.c  input.c  path-test.c  path.c  scanner-test.c  scanner.c  scheme.c  shell.c  string.c  term.c  theme.c  var-test.c  var.c
make/: baremetal-config.mk  default-config.mk  patterns.mk
src/: CMakeLists.txt  Makefile  alloy.c  bmfs-disk.c  bmfs-disk.h  bmfs-host.c  bmfs-host.h  build.sh  clean.sh  heap-test.c  host-baremetal.c  host-linux.c  host.c  host.h  input-test.c  input.c  libBareMetal.asm  loader.asm  sdl-term.c  shell.c  syscall-hooks.asm  term.c  term.h  vesaterm-test.c  vesaterm.c  xterm.c
utils/: Makefile  alloy-font-generator.c  build.sh  clean.sh
